# asimap

./: .drone.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Make.rules  Makefile  README  README.md  TODO.txt  asimapd.py  asimapd_user.py  docker-compose.yml  imapclient.py  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  userimapclient.py  userserver.py
asimap/: IMAPProcess.py  __init__.py  asimapd.py  asimapd_user.py  asyncconn.py  auth.py  client.py  constants.py  db.py  exceptions.py  fetch.py  generator.py  hashers.py  logging.py  mailbox.py  mailboxcontroller.py  mbox.py  message_cache.py  mh.py  new_server.py  old_server.py  options.py  parse.py  password_db.py  pop3_client.py  pop3_parse.py  pop3_server.py  search.py  server.py  set_password.py  throttle.py  trace.py  user.py  user_server.py  utils.py
asimap/test/: __init__.py  all_tests.py  asimapd_debug_runner.py  conftest.py  debug_imap_client.py  factories.py  functional_test.py  gen_imapparse_tests.py  imapfetch_test.py  imapparse_test.py  imapsearch_test.py  test_auth.py  test_client.py  test_db.py  test_fetch.py  test_generator.py  test_mbox.py  test_message_cache.py  test_mh.py  test_parse.py  test_pop3.py  test_search.py  test_server.py  test_throttle.py  test_user_server.py  test_users.py  test_utils.py  utils.py
asimap/test/fixtures/: good_received_imap_messages.js  good_received_imap_messages.json
asimap/test/fixtures/mhdir/one/: 1  10  11  12  15  16  19  2
asimap/test/fixtures/mhdir/problems/: 1  2  3  5
bug_reports/: 2016.10.26-crash.txt  2016.11.16-bad-quoting.txt  2016.11.16-reconnect-select-archive.txt  2016.11.17-append-failure.txt  2016.11.18-internal-error.txt  2018.05.30-bad-message-uuid.txt
bug_reports/2016.11.16-bad-encoding-in-fetch/: 2
docs/: test_mode.org
docs/rfcs/: rfc2045.txt  rfc2088.txt  rfc2177.txt  rfc2180.txt  rfc2971.txt  rfc3348.txt  rfc3501.txt  rfc3502.txt  rfc3691.txt  rfc4315.txt  rfc4466.txt  rfc4469.txt  rfc4551.txt  rfc4731.txt  rfc5161.txt  rfc5162.txt  rfc5256.txt  rfc5258.txt  rfc5267.txt  rfc5465.txt  rfc6154.txt  rfc6851.txt  rfc7888.txt  rfc9051.txt  rfc9738.txt
experiments/: async_ssl_test.py  asynchat.py  sslasyncore.py  test_echo_server.py  test_server.py  test_ssl_echo_server.py
requirements/: Makefile  base.in  base.txt  build.in  build.txt  development.in  development.txt  lint.in  lint.txt  local.in  local.txt  production.in  production.txt
scripts/: asimap_auth.py  asimapd.py  asimapd.sh  asimapd_user.py  imap_client.py  index_all_mboxs.py  message_load_times.py  move_to_subdir_by_year.py
test/: asimapd_debug_runner.py  conftest.py  debug_imap_client.py  test_parse.py
test_client/: imap_client.py
utilities/: move_to_subdir_by_year.py
utils/: asimap_auth  asimap_auth.py  asimapd.sh  email_load_and_parse_times.py  index_all_mboxs.py  message_load_times.py  move_to_subdir_by_year.py
