[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asimap"
dynamic = ["version"]
dependencies = [
    "aiofiles",
    "aioretry",
    "aiosqlite",
    "charset-normalizer",
    "docopt",
    "python-dotenv",
    "python-json-logger",
    "sentry-sdk",
]
authors = [
  { name="Scanner Luce", email="scanner@apricot.com" },
]
maintainers = [
  { name="Scanner Luce", email="scanner@apricot.com" },
]
description = "An IMAP server that uses `mailbox.MH` as its storage"
keywords = ["email", "imap"]
readme = "README.md"

# NOTE: There are fixes to mail header parsing routines that require we specify
#       this version of python specifically.
#
requires-python = ">=3.13.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.scripts]
asimapd = "asimap.asimapd:main"
asimapd_user = "asimap.asimapd_user:main"
asimapd_set_password = "asimap.set_password:main"

[project.urls]
Homepage = "https://github.com/scanner/asimap"
Issues = "https://github.com/scanner/asimap/issues"
Changelog = "https://github.com/scanner/asimap/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    # Testing
    "codetiming",
    "dirty-equals",
    "imapclient",
    "ipython",
    "pytest",
    "pytest-asyncio",
    "pytest-coverage",
    "pytest-factoryboy",
    "pytest-mock",
    "pytest-sugar",
    "requests-mock",
    "rich",
    "trustme",
    # Linting and formatting
    "black",
    "coverage",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
    "yapf",
    # Type stubs
    "types-aiofiles",
    "types-cachetools",
    "types-pytz",
    "types-requests",
    "types-setuptools",
    "types-redis",
    # Build
    "build",
    "hatch",
]

[tool.hatch.version]
path = "asimap/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
   "asimap",
   "LICENSE",
   "README.md",
]
exclude = [
   "asimap/test",
   "docs",
   "venv",
   ".gitignore",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without explicit strict parameter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = [
    '__pycache__',
    '^\.mnt',
    '.*[-_]cache',
    '.git',
    '\.venv',
    'venv*',
    'tmp',
    'fixtures',
    'deployment',
    'docs',
    'requirements',
    'migrations'
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
]

[[tool.mypy.overrides]]
module = [
    'boto3',
    'click',
    'funcy',
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "smoke: marks tests as smoke (deselect with '-m \"not smoke\"')",
    "integration",
]

[tool.pylint.MASTER]
ignore-paths=[ ".*/migrations/.*" ]

[tool.pylint.FORMAT]
max-module-lines=2000

[tool.pylint.DESIGN]
max-attributes=15
max-branches=15

[tool.pylint.BASIC]
no-docstring-rgx='^_|^Meta$|.+Serializer$|.+ViewSet$|^[Tt]est'

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "unnecessary-pass",
    "import-error",
    "too-few-public-methods"
]
